<resources>
	<string name="app_name">BEEPEPro</string>

	<!-- Strings related to login -->
	<string name="prompt_email">E-Mail</string>
	<string name="prompt_password">Senha</string>
	<string name="action_sign_in">Entrar</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">Endereço de e-mail inválido</string>
	<string name="error_invalid_password">Senha inválida</string>
	<string name="error_incorrect_password">Senha incorreta</string>
	<string name="error_field_required">Esta campo é obrigatório</string>
	<string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
	<string name="title_activity_principal">Principal</string>
	<string name="title_activity_imovel_detail">Detalhe</string>
	<string name="navigation_drawer_open">Abrir</string>
	<string name="navigation_drawer_close">Fechar</string>
	<string name="nav_header_title">BEEPE Pro</string>
	<string name="nav_header_subtitle">http://www.beepe.com.br</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="frm_buscar">Buscar</string>
	<string name="frm_tipo">Tipo</string>
	<string name="frm_locacao">Locação</string>
	<string name="frm_venda">Venda</string>
	<string name="frm_localizacao">Localização</string>
	<string name="frm_valor">Valor</string>
	<string name="frm_inicial">De</string>
	<string name="frm_final">Até</string>

<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
