<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".imovel.fonte.Pesquisa">


	<!--
	seção do formulário de pesquisa
	-->
	<LinearLayout
    android:id="@+id/llForm"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:visibility="visible">

		<Button
			android:id="@+id/btnBuscar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/frm_buscar" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/frm_tipo" />

		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/radioButton2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/frm_locacao" />

			<RadioButton
				android:id="@+id/radioButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/frm_venda" />
		</RadioGroup>

		<TextView
			android:id="@+id/textView3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/frm_localizacao" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:visibility="visible">

			<Spinner
				android:id="@+id/spnUf"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<Spinner
				android:id="@+id/spnCidade"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

		</LinearLayout>

		<TextView
			android:id="@+id/textView4"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/frm_valor" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:visibility="visible">

			<TextView
				android:id="@+id/textView5"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/frm_inicial" />

			<EditText
				android:id="@+id/txtValorInicial"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="numberDecimal"
				android:text="0,00"
				android:textAlignment="textEnd" />

			<TextView
				android:id="@+id/textView6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/frm_final" />

			<EditText
				android:id="@+id/txtValorFinal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="numberDecimal"
				android:text="0,00"
				android:textAlignment="textEnd" />

		</LinearLayout>

	</LinearLayout>

	<!--
	Seção da barra de progresso
	-->
	<FrameLayout
		android:id="@+id/flProgresso"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">

		<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</FrameLayout>


	<!--
	Seção de cardviewers com os imóveis que atendem à pesquisa
	-->
	<android.support.v7.widget.RecyclerView
		android:id="@+id/rvImoveis"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/cardview_light_background"
		android:visibility="gone" />

</android.support.constraint.ConstraintLayout>